--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>meow-meow</title>
 	<link rel="stylesheet" type="text/css" href="iframes.css">
+	
+	<!-- JAVA LIBRARY QUERY -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="iframes.js"async></script>
 </head>
