--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 </div>
 
 <div class="frame1">
-<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="400" width="500" title="Iframe Example"></iframe>
+<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="400" width="500" title="kitty"></iframe>
 </div>
 
 <div class="frame2">
-<iframe src=""  title="Iframe Example"></iframe>
+<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="400" width="500" title="Iframe Example"></iframe>
 </div>
 
 <div class="frame3">
