--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>meow-meow</title>
 	<link rel="stylesheet" type="text/css" href="iframes.css">
+	<!-- GOOGLE FONTS -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
 
 	<!-- JAVA LIBRARY QUERY -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -24,23 +26,23 @@
 </div>
 
 <div class="frame1">
-<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="400" width="500" title="kitty"></iframe>
+<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="300" width="400" title="kitty"></iframe>
 </div>
 <br>
 <div class="frame2">
-<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="400" width="500" title="Iframe Example"></iframe>
+<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="300" width="400" title="Iframe Example"></iframe>
 </div>
 
 <div class="frame3">
-<iframe src="" height="200" width="300" title="Iframe Example"></iframe>
+<iframe src="" height="300" width="400" title="Iframe Example"></iframe>
 </div>
 
 <div class="frame4">
-<iframe src="" height="200" width="300" title="Iframe Example"></iframe>
+<iframe src="" height="300" width="400" title="Iframe Example"></iframe>
 </div>
 
 <div class="frame5">
-<iframe src="" height="200" width="300" title="Iframe Example"></iframe>
+<iframe src="" height="300" width="400" title="Iframe Example"></iframe>
 </div>
 
 </div>
