--- a/index.html
+++ b/index.html
@@ -15,20 +15,27 @@
 </head>
 <body>
 
+
+<header class="bgimg">
+	<div class="title">
+    <h1>Cat<br>World</h1>
+  </div>
+</header>
+
+<div class="container">
 <div class="content">
 
-<div class="title">
-<h2>MY LOVE FOR </h2>
-</div>
 
-<div class="title2">
-<h1>CATS</h1>
-</div>
+<h5> About kitties</h5>
+   <p>The Cafe was founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>In addition to our full espresso and brew bar menu, we serve fresh made-to-order breakfast and lunch sandwiches, as well as a selection of sides and salads and other good stuff.</p>
 
 <div class="frame1">
-<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="300" width="400" title="kitty"></iframe>
+<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="400" width="300" title="kitty" class="iframe1"></iframe>
 </div>
+
 <br>
+<!-- 
 <div class="frame2">
 <iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="300" width="400" title="Iframe Example"></iframe>
 </div>
@@ -43,8 +50,9 @@
 
 <div class="frame5">
 <iframe src="" height="300" width="400" title="Iframe Example"></iframe>
-</div>
+</div> -->
 
+</div>
 </div>
 
 
