--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
 
 
-<header class="bgimg">
+<header class="cover">
 	<div class="title">
-    <h1>the<br>cafe</h1>
+    <h1>CATS!</h1>
   </div>
 </header>
 
