--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<title>meow-meow</title>
 	<link rel="stylesheet" type="text/css" href="iframes.css">
 	<!-- GOOGLE FONTS -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
 
 	<!-- JAVA LIBRARY QUERY -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -27,7 +28,7 @@
 
 
 <h5> About kitties</h5>
-   <p>The Cafe was founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+   <p>.</p>
     <p>In addition to our full espresso and brew bar menu, we serve fresh made-to-order breakfast and lunch sandwiches, as well as a selection of sides and salads and other good stuff.</p>
 
 <div class="frame1">
@@ -46,7 +47,7 @@
 
 
 <div class="frame3">
-<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="400" width="300" title="kitty" class="iframe3"></iframe>
+<iframe src="https://www.purina.ca/articles/cat/facts/10-fascinating-facts-about-cats" height="400" width="300" title="kitty" class="iframe3"></iframe>
 </div>
 
 
