--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 <div class="content">
 
 
-<h5> About kitties</h5>
-   <p>.</p>
-    <p>In addition to our full espresso and brew bar menu, we serve fresh made-to-order breakfast and lunch sandwiches, as well as a selection of sides and salads and other good stuff.</p>
+<h2> Welcome to my great cat addiction web.</h2>
+    <p></p>
 
 <div class="frame1">
 <iframe src="https://youtube.com/embed/lAIGb1lfpBw" height="400" width="300" title="kitty" class="iframe1"></iframe>
@@ -52,7 +51,7 @@
 
 
 <div class="frame4">
-<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="400" width="300" title="kitty" class="iframe4"></iframe>
+<iframe src="https://www.pinterest.fr/monchatdore/best-cat-memes/" height="400" width="300" title="kitty" class="iframe4"></iframe>
 </div>
 
 <div class="frame5">
