--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
 <div class="container">
 <div class="content">
 
-
-<h2> Welcome to my great cat addiction web.</h2>
-    <p></p>
+<br>
+<h1 style="text-align: center;"> Welcome to my cat addiction web!</h1>
+ <br>
+<p> This is a website dedicated to cat lovers. If your not a cat lover, well your missing out a lot! But if you are, then you're Pawsome! (see what i did there? :3)These are some of my favorite content related to cats. </p>
+<br>
+<h1>ONE.</h1>
+    <p> Not sure if this is cat related but here is a video of animated marching band cats. I heard it cures depression. Enjoy.</p>
+<br>
 
 <div class="frame1">
 <iframe src="https://youtube.com/embed/lAIGb1lfpBw" height="400" width="300" title="kitty" class="iframe1"></iframe>
@@ -37,6 +42,9 @@
 <br>
 
 <p>The Cafe was founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<br>
+<h1>TWO.</h1>
+
     <p>In addition to our full espresso and brew bar menu, we serve fresh made-to-order breakfast and lunch sandwiches, as well as a selection of sides and salads and other good stuff.</p>
 
 
@@ -51,11 +59,12 @@
 
 
 <div class="frame4">
-<iframe src="https://www.pinterest.fr/monchatdore/best-cat-memes/" height="400" width="300" title="kitty" class="iframe4"></iframe>
+	<iframe src="https://assets.pinterest.com/ext/embed.html?id=758293655987794494" height="615" width="345" frameborder="0" scrolling="no" ></iframe>
+<!-- <iframe src="https://assets.pinterest.com/ext/embed.html?id=758293655987794494" height="400" width="300" title="kitty" class="iframe4"></iframe> -->
 </div>
 
 <div class="frame5">
-<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="400" width="300" title="kitty" class="iframe5"></iframe>
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=758293655987794494" height="615" width="345" >
 </div>
 <!-- 
 
