--- a/index.html
+++ b/index.html
@@ -27,45 +27,63 @@
 <div class="content">
 
 <br>
-<h1 style="text-align: center;"> Welcome to my cat addiction web!</h1>
+<h2 style="text-align: center;"> Welcome to my cat addiction web!</h2>
  <br>
-<p> This is a website dedicated to cat lovers. If your not a cat lover, well your missing out a lot! But if you are, then you're Pawsome! (see what i did there? :3)These are some of my favorite content related to cats. </p>
+<p> This is a website dedicated to cat lovers. If your not a cat lover, well your missing out a lot! But if you are, then you're <strong>Pawsome!</strong> (see what i did there? :3)These are some of my favorite content related to cats. </p>
 <br>
-<h1>ONE.</h1>
+<h2>ONE</h2>
     <p> Not sure if this is cat related but here is a video of animated marching band cats. I heard it cures depression. Enjoy.</p>
 <br>
-
 <div class="frame1">
 <iframe src="https://youtube.com/embed/lAIGb1lfpBw" height="400" width="300" title="kitty" class="iframe1"></iframe>
 </div>
 
 <br>
-
-<p>The Cafe was founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<h2>TWO</h2>
+<p>If you enjoyed the song, then maybe your ready for a lenghty cat movie. It is a one hour film of kittens growing up. Just a warnign, there's a birth scene in the beginning just incase you feel quesy.  Did I really watched the whole thing? yes. Did I cry? yes. Was it super duper cute? absolutely. What is perfect?. NO. It was <strong> purrfect :,) </strong></p>
 <br>
-<h1>TWO.</h1>
-
-    <p>In addition to our full espresso and brew bar menu, we serve fresh made-to-order breakfast and lunch sandwiches, as well as a selection of sides and salads and other good stuff.</p>
-
 
 <div class="frame2">
 <iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="400" width="300" title="kitty" class="iframe2"></iframe>
 </div>
 
+<br>
+<h2>THREE</h2>
+<p>I'm assumign you probably didn't watch the whole thing. If you did, congrats! You are a true kitty fan.  I have an entire collection of cat memes but unfortunetly I cannot uplaod them all. Here's one. No, I'm not bashing dog lovers I just thought this was funny. </p>
+<br>
+<p> I'm also adding a link to a cat meme collection I found.
+	<a href="https://www.pinterest.fr/monchatdore/best-cat-memes/">Meow</a>
+</p>
+
+<br>
 
 <div class="frame3">
-<iframe src="https://www.purina.ca/articles/cat/facts/10-fascinating-facts-about-cats" height="400" width="300" title="kitty" class="iframe3"></iframe>
+	<iframe src="https://assets.pinterest.com/ext/embed.html?id=758293655987794494" height="615" width="345" frameborder="0" scrolling="no" class="iframe3"></iframe>
 </div>
 
+
+<br>
+<h2>TWO</h2>
+<p>If you enjoyed the song, then maybe your ready for a lenghty cat movie. It is a one hour film of kittens growing up. Just a warnign, there's a birth scene in the beginning just incase you feel quesy.  Did I really watched the whole thing? yes. Did I cry? yes. Was it super duper cute? absolutely. What is perfect?. NO. It was <strong> purrfect :,) </strong></p>
+<br>
 
 <div class="frame4">
-	<iframe src="https://assets.pinterest.com/ext/embed.html?id=758293655987794494" height="615" width="345" frameborder="0" scrolling="no" ></iframe>
-<!-- <iframe src="https://assets.pinterest.com/ext/embed.html?id=758293655987794494" height="400" width="300" title="kitty" class="iframe4"></iframe> -->
+	<iframe src="https://www.purina.ca/articles/cat/facts/10-fascinating-facts-about-cats" height="400" width="300" title="kitty" class="iframe4"></iframe>
 </div>
+
+<br>
+<h2>TWO</h2>
+<p>If you enjoyed the song, then maybe your ready for a lenghty cat movie. It is a one hour film of kittens growing up. Just a warnign, there's a birth scene in the beginning just incase you feel quesy.  Did I really watched the whole thing? yes. Did I cry? yes. Was it super duper cute? absolutely. What is perfect?. NO. It was <strong> purrfect :,) </strong></p>
+<br>
 
 <div class="frame5">
 <iframe src="https://assets.pinterest.com/ext/embed.html?id=758293655987794494" height="615" width="345" >
 </div>
+<br>
+<h2>TWO</h2>
+<p>If you enjoyed the song, then maybe your ready for a lenghty cat movie. It is a one hour film of kittens growing up. Just a warnign, there's a birth scene in the beginning just incase you feel quesy.  Did I really watched the whole thing? yes. Did I cry? yes. Was it super duper cute? absolutely. What is perfect?. NO. It was <strong> purrfect :,) </strong></p>
+<br>
+
 <!-- 
 
 <div class="frame5">
