--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
  <br>
 <p> This is a website dedicated to cat lovers. If your not a cat lover, well your missing out a lot! But if you are, then you're <strong>Pawsome!</strong> (see what i did there? :3)These are some of my favorite content related to cats. </p>
 <br>
+<hr>
+<br>
 <h2>ONE</h2>
     <p> Not sure if this is cat related but here is a video of animated marching band cats. I heard it cures depression. Enjoy.</p>
 <br>
@@ -63,25 +65,32 @@
 
 
 <br>
-<h2>TWO</h2>
-<p>If you enjoyed the song, then maybe your ready for a lenghty cat movie. It is a one hour film of kittens growing up. Just a warnign, there's a birth scene in the beginning just incase you feel quesy.  Did I really watched the whole thing? yes. Did I cry? yes. Was it super duper cute? absolutely. What is perfect?. NO. It was <strong> purrfect :,) </strong></p>
+<h2>FOUR</h2>
+<p>Besides cute, funny cat stuff, It's also good to learn some fun facts about them. Here are some facts that may have or may not already know! Besides fun fact, there are some good facts that could help you be more educated about cats in general.</p>
 <br>
 
 <div class="frame4">
 	<iframe src="https://www.purina.ca/articles/cat/facts/10-fascinating-facts-about-cats" height="400" width="300" title="kitty" class="iframe4"></iframe>
 </div>
 
+
+<div class="frame4-1">
+	<iframe src="https://www.purina.ca/articles/cat/facts/10-fascinating-facts-about-cats" height="400" width="300" title="kitty" class="iframe4-1"></iframe>
+</div>
+
 <br>
-<h2>TWO</h2>
-<p>If you enjoyed the song, then maybe your ready for a lenghty cat movie. It is a one hour film of kittens growing up. Just a warnign, there's a birth scene in the beginning just incase you feel quesy.  Did I really watched the whole thing? yes. Did I cry? yes. Was it super duper cute? absolutely. What is perfect?. NO. It was <strong> purrfect :,) </strong></p>
+<h2>FIVE</h2>
+<p>Last but not least, if you started liking cats more or enjoyed these content? How about considering adopting a cat? Checke out <strong>TORONTO HUMANE SOCIETY</strong>. This is an animal shelter that I have visited before.  They have many adorables felines waiting to be adopted! There's also dogs :) </p>
 <br>
 
 <div class="frame5">
-<iframe src="https://assets.pinterest.com/ext/embed.html?id=758293655987794494" height="615" width="345" >
+<iframe src="https://www.torontohumanesociety.com/" height="400" width="300" title="kitty" class="iframe5"></iframe>
 </div>
 <br>
-<h2>TWO</h2>
-<p>If you enjoyed the song, then maybe your ready for a lenghty cat movie. It is a one hour film of kittens growing up. Just a warnign, there's a birth scene in the beginning just incase you feel quesy.  Did I really watched the whole thing? yes. Did I cry? yes. Was it super duper cute? absolutely. What is perfect?. NO. It was <strong> purrfect :,) </strong></p>
+
+<hr>
+<h2> <strong>STAY PAWSITIVE!</strong></h2>
+
 <br>
 
 <!-- 
