--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
 
 <br>
 <h2>FOUR</h2>
-<p>Besides cute, funny cat stuff, It's also good to learn some fun facts about them. Here are some facts that may have or may not already know! Besides fun fact, there are some good facts that could help you be more educated about cats in general.</p>
+<p>Besides cute, funny cat stuff, It's also good to learn some facts about them. Here are 101 fun facts about cats! Besides fun fact, there are some general cat information that could help you be more educated about cats. </p>
 <br>
 
 <div class="frame4">
-	<iframe src="https://www.purina.ca/articles/cat/facts/10-fascinating-facts-about-cats" height="400" width="300" title="kitty" class="iframe4"></iframe>
+	<iframe src="https://cvillecatcare.com/veterinary-topics/101-amazing-cat-facts-fun-trivia-about-your-feline-friend/" height="400" width="300" title="kitty" class="iframe4"></iframe>
 </div>
-
+<br>
 
 <div class="frame4-1">
-	<iframe src="https://www.purina.ca/articles/cat/facts/10-fascinating-facts-about-cats" height="400" width="300" title="kitty" class="iframe4-1"></iframe>
+	<iframe src="https://icatcare.org/advice/thinking-of-getting-a-cat/" height="400" width="300" title="kitty" class="iframe4-1"></iframe>
 </div>
 
 <br>
