--- a/index.html
+++ b/index.html
@@ -10,21 +10,17 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
 
-	<!-- JAVA LIBRARY QUERY -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script src="iframes.js"async></script>
 </head>
 <body>
 
-
-<header class="cover">
-	<div class="title">
-    <h1>CATS!</h1>
-  </div>
-</header>
-
 <div class="container">
 <div class="content">
+
+
+<div class="cover">
+	
+</div> 
+
 
 <br>
 <h2 style="text-align: center;"> Welcome to my cat addiction web!</h2>
