--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
 <div class="container">
 <div class="content">
 
-
-<div class="cover">
-	
-</div> 
+<div class="cover"></div> 
 
 
 <br>
 <h2 style="text-align: center;"> Welcome to my cat addiction web!</h2>
- <br>
+<br>
 <p> This is a website dedicated to cat lovers. If your not a cat lover, well your missing out a lot! But if you are, then you're <strong>Pawsome!</strong> (see what i did there? :3)These are some of my favorite content related to cats. </p>
 <br>
 <hr>
@@ -38,6 +35,7 @@
 </div>
 
 <br>
+
 <h2>TWO</h2>
 <p>If you enjoyed the song, then maybe your ready for a lenghty cat movie. It is a one hour film of kittens growing up. Just a warnign, there's a birth scene in the beginning just incase you feel quesy.  Did I really watched the whole thing? yes. Did I cry? yes. Was it super duper cute? absolutely. What is perfect?. NO. It was <strong> purrfect :,) </strong></p>
 <br>
@@ -49,11 +47,9 @@
 
 <br>
 <h2>THREE</h2>
-<p>I'm assumign you probably didn't watch the whole thing. If you did, congrats! You are a true kitty fan.  I have an entire collection of cat memes but unfortunetly I cannot uplaod them all. Here's one. No, I'm not bashing dog lovers I just thought this was funny. </p>
+<p>I'm assumign you probably didn't watch the whole thing. If you did, congrats! You are a true kitty fan.  I have an entire collection of cat memes but unfortunetly I cannot uplaod them all. Here's one. No, I'm not bashing dog lovers I just thought this was funny. I'm also adding a link to a cat meme collection I found.
+	<a href="https://www.pinterest.fr/monchatdore/best-cat-memes/">Meow</a> </p>
 <br>
-<p> I'm also adding a link to a cat meme collection I found.
-	<a href="https://www.pinterest.fr/monchatdore/best-cat-memes/">Meow</a>
-</p>
 
 <br>
 
