--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <div class="container">
 <div class="content">
 
-<div class="cover"></div> 
+<div class="cover"> 
+	<img src="https://i.imgur.com/wYJ23Wi.png" class="cover1">
+</div> 
 
 
 <br>
