--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <div class="frame2">
 <iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="400" width="300" title="kitty" class="iframe2"></iframe>
-<h3>Kitten Grow Complete Different in 100 Days</h3>
+<h3>Kitten Grow 100 Days</h3>
 </div>
 
 <br>
