--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 <body>
 
-<div class="container">
-<div class="content">
-
 <div class="cover"> 
 	<img src="https://i.imgur.com/wYJ23Wi.png" class="cover1">
 </div> 
 
+
+<div class="container">
+<div class="content">
 
 <br>
 <h2 style="text-align: center;"> Welcome to my cat addiction web!</h2>
@@ -92,18 +92,12 @@
 <h2> <strong>STAY PAWSITIVE!</strong></h2>
 
 <br>
-
-<!-- 
-
-<div class="frame5">
-<iframe src="" height="300" width="400" title="Iframe Example"></iframe>
-</div> -->
-
 </div>
 </div>
 
-
-
+<div class="endcover"> 
+	<img src="https://i.imgur.com/wYJ23Wi.png" class="endcover1">
+</div> 
 
 
 </body>
