--- a/index.html
+++ b/index.html
@@ -7,98 +7,87 @@
 	<title>meow-meow</title>
 	<link rel="stylesheet" type="text/css" href="iframes.css">
 	<!-- GOOGLE FONTS -->
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
 
 </head>
 <body>
 
-<div class="cover"> 
-	<img src="https://i.imgur.com/wYJ23Wi.png" class="cover1">
-</div> 
+	<div class="cover"> 
+		<img src="https://i.imgur.com/wYJ23Wi.png" class="cover1">
+	</div> 
 
 
-<div class="container">
-<div class="content">
+	<div class="container">
+		<div class="content">
 
-<br>
-<h2 style="text-align: center;"> Welcome to my cat addiction web!</h2>
-<br>
-<p> This is a website dedicated to cat lovers. If your not a cat lover, well your missing out a lot! But if you are, then you're <strong>Pawsome!</strong> (see what i did there? :3)These are some of my favorite content related to cats. </p>
-<br>
-<hr>
-<br>
-<h2>ONE</h2>
-    <p> Not sure if this is cat related but here is a video of animated marching band cats. I heard it cures depression. Enjoy.</p>
-<br>
-<div class="frame1">
-<iframe src="https://youtube.com/embed/lAIGb1lfpBw" height="400" width="300" title="kitty" class="iframe1"></iframe>
-<h3>MitchiriNeko March</h3>
-</div>
+			<br>
+			<h2 style="text-align: center;"> Welcome to my cat addiction web!</h2>
+			<br>
+			<p> This is a website dedicated to cat lovers. If your not a cat lover, well your missing out a lot! But if you are, then you're <strong>Pawsome!</strong> (see what i did there? :3)These are some of my favorite content related to cats. </p>
+			<br>
+			<hr>
+			
+			<br>
+			<h2>ONE</h2>
+			<p> Not sure if this is cat related but here is a video of animated marching band cats. I heard it cures depression. Enjoy.</p>
+			<br>
+			<div class="frame1">
+				<iframe src="https://youtube.com/embed/lAIGb1lfpBw" height="400" width="300" title="kitty" class="iframe1"></iframe>
+				<h3>MitchiriNeko March</h3>
+			</div>
+			
+            <br>
+			<h2>TWO</h2>
+			<p>If you enjoyed the song, then maybe your ready for a lenghty cat movie. It is a one hour film of kittens growing up. Just a warnign, there's a birth scene in the beginning just incase you feel quesy.  Did I really watched the whole thing? yes. Did I cry? yes. Was it super duper cute? absolutely. What is perfect?. NO. It was <strong> purrfect :,) </strong></p>
+			<br>
+			<div class="frame2">
+				<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="400" width="300" title="kitty" class="iframe2"></iframe>
+				<h3>Kitten Grow 100 Days</h3>
+			</div>
 
-<br>
+			<br>
+			<h2>THREE</h2>
+			<p>I'm assumign you probably didn't watch the whole thing. If you did, congrats! You are a true kitty fan.  I have an entire collection of cat memes but unfortunetly I cannot uplaod them all. Here's one. No, I'm not bashing dog lovers I just thought this was funny. I'm also adding a link to a cat meme collection I found.
+				<a href="https://www.pinterest.fr/monchatdore/best-cat-memes/">Meow</a> </p>
+				<br>
+				<div class="frame3">
+					<iframe src="https://assets.pinterest.com/ext/embed.html?id=758293655987794494" height="615" width="300" frameborder="0" scrolling="no" class="iframe3"></iframe>
+					<h3>Pinterest cat meme</h3>
+				</div>
 
-<h2>TWO</h2>
-<p>If you enjoyed the song, then maybe your ready for a lenghty cat movie. It is a one hour film of kittens growing up. Just a warnign, there's a birth scene in the beginning just incase you feel quesy.  Did I really watched the whole thing? yes. Did I cry? yes. Was it super duper cute? absolutely. What is perfect?. NO. It was <strong> purrfect :,) </strong></p>
-<br>
+				<br>
+				<h2>FOUR</h2>
+				<p>Besides cute, funny cat stuff, It's also good to learn some facts about them. Here are 101 fun facts about cats! Besides fun fact, there are some general cat information that could help you be more educated about cats. </p>
+				<br>
+				<div class="frame4">
+					<iframe src="https://cvillecatcare.com/veterinary-topics/101-amazing-cat-facts-fun-trivia-about-your-feline-friend/" height="400" width="300" title="kitty" class="iframe4"></iframe>
+					<h3>101 Amazing Cat Facts</h3>
+				</div>
+				<br>
+				<div class="frame4-1">
+					<iframe src="https://icatcare.org/advice/thinking-of-getting-a-cat/" height="400" width="300" title="kitty" class="iframe4-1"></iframe>
+					<h3>Thinking of getting a cat?</h3>
+				</div>
+				
+                <br>
+				<h2>FIVE</h2>
+				<p>Last but not least, if you started liking cats more or enjoyed these content, how about considering adopting a cat? Checke out <strong>TORONTO HUMANE SOCIETY</strong>. This is an animal shelter that I have visited before.  They have many adorables felines waiting to be adopted! There's also dogs :) (a puppy bit me. Ferocious puppy.) </p>
+				<br>
 
-<div class="frame2">
-<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="400" width="300" title="kitty" class="iframe2"></iframe>
-<h3>Kitten Grow 100 Days</h3>
-</div>
+				<div class="frame5">
+					<iframe src="https://www.torontohumanesociety.com/" height="400" width="300" title="kitty" class="iframe5"></iframe>
+					<h3>Toronto Humane society</h3>
+				</div>
+			</div>
+		</div>
 
-<br>
-<h2>THREE</h2>
-<p>I'm assumign you probably didn't watch the whole thing. If you did, congrats! You are a true kitty fan.  I have an entire collection of cat memes but unfortunetly I cannot uplaod them all. Here's one. No, I'm not bashing dog lovers I just thought this was funny. I'm also adding a link to a cat meme collection I found.
-	<a href="https://www.pinterest.fr/monchatdore/best-cat-memes/">Meow</a> </p>
-<br>
-
-<br>
-
-<div class="frame3">
-	<iframe src="https://assets.pinterest.com/ext/embed.html?id=758293655987794494" height="615" width="300" frameborder="0" scrolling="no" class="iframe3"></iframe>
-	<h3>Pinterest cat meme</h3>
-</div>
-
-
-<br>
-<h2>FOUR</h2>
-<p>Besides cute, funny cat stuff, It's also good to learn some facts about them. Here are 101 fun facts about cats! Besides fun fact, there are some general cat information that could help you be more educated about cats. </p>
-<br>
-
-<div class="frame4">
-	<iframe src="https://cvillecatcare.com/veterinary-topics/101-amazing-cat-facts-fun-trivia-about-your-feline-friend/" height="400" width="300" title="kitty" class="iframe4"></iframe>
-	<h3>101 Amazing Cat Facts</h3>
-</div>
-<br>
-
-<div class="frame4-1">
-	<iframe src="https://icatcare.org/advice/thinking-of-getting-a-cat/" height="400" width="300" title="kitty" class="iframe4-1"></iframe>
-	<h3>Thinking of getting a cat?</h3>
-</div>
-
-<br>
-<h2>FIVE</h2>
-<p>Last but not least, if you started liking cats more or enjoyed these content? How about considering adopting a cat? Checke out <strong>TORONTO HUMANE SOCIETY</strong>. This is an animal shelter that I have visited before.  They have many adorables felines waiting to be adopted! There's also dogs :) </p>
-<br>
-
-<div class="frame5">
-<iframe src="https://www.torontohumanesociety.com/" height="400" width="300" title="kitty" class="iframe5"></iframe>
-<h3>Toronto Humane society</h3>
-</div>
-<br>
-
-<hr>
-<h2> <strong>STAY PAWSITIVE!</strong></h2>
-
-<br>
-</div>
-</div>
-
-<div class="endcover"> 
-	<img src="https://i.imgur.com/wYJ23Wi.png" class="endcover1">
-</div> 
+		<br>
+		<h2> <strong>STAY PAWSITIVE!</strong></h2>
+		<div class="endcover"> 
+			<img src="https://i.imgur.com/nUWT9i4.png" class="endcover1">
+		</div> 
 
 
-</body>
-</html>
+	</body>
+	</html>
