--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 			<br>
 			<h2 style="text-align: center;"> Welcome to my cat addiction web!</h2>
 			<br>
-			<p> This is a website dedicated to cat lovers. If your not a cat lover, well your missing out a lot! But if you are, then you're <strong>Pawsome!</strong> (see what i did there? :3)These are some of my favorite content related to cats. </p>
+			<p> This is a website dedicated to cat lovers. If you're not a cat lover, well you're missing out a lot! But if you are, then you're <strong>Pawsome!</strong> (see what i did there? :3)(see what i did there? :3)These are some of my favorite content related to cats.
+			</p>
 			<br>
 			<hr>
 			
@@ -39,7 +40,7 @@
 			
 			<br>
 			<h2>TWO</h2>
-			<p>If you enjoyed the song, then maybe your ready for a lenghty cat movie. It is a one hour film of kittens growing up. Just a warnign, there's a birth scene in the beginning just incase you feel quesy.  Did I really watched the whole thing? yes. Did I cry? yes. Was it super duper cute? absolutely. What is perfect?. NO. It was <strong> purrfect :,) </strong></p>
+			<p>If you enjoyed the song, then maybe you're ready for a lengthy cat movie. It is a one hour film of kittens growing up. Just a warning, there's a birth scene in the beginning just in case you feel queasy. Did I really watch the whole thing? yes. Did I cry? yes. Was it super duper cute? absolutely. What is perfect?. NO. It was <strong> purrfect :,) </strong></p>
 			<br>
 			<div class="frame2">
 				<iframe src="https://youtube.com/embed/zJFfaWrVhdI" height="400" width="300" title="kitty" class="iframe2"></iframe>
@@ -48,7 +49,7 @@
 
 			<br>
 			<h2>THREE</h2>
-			<p>I'm assumign you probably didn't watch the whole thing. If you did, congrats! You are a true kitty fan.  I have an entire collection of cat memes but unfortunetly I cannot uplaod them all. Here's one. No, I'm not bashing dog lovers I just thought this was funny. I'm also adding a link to a cat meme collection I found.
+			<p>I'm assuming you probably didn't watch the whole thing. If you did, congrats! You are a true kitty fan. I have an entire collection of cat memes but unfortunately I cannot upload them all. Here's one. No, I'm not bashing dog lovers. I just thought this was funny. I'm also adding a link to a cat meme collection I found.
 				<a href="https://www.pinterest.fr/monchatdore/best-cat-memes/">Meow</a> </p>
 				<br>
 				<div class="frame3">
@@ -58,7 +59,7 @@
 
 				<br>
 				<h2>FOUR</h2>
-				<p>Besides cute, funny cat stuff, It's also good to learn some facts about them. Here are 101 fun facts about cats! Besides fun fact, there are some general cat information that could help you be more educated about cats. </p>
+				<p>Besides cute, funny cat stuff, It's also good to learn some facts about them. Here are 101 fun facts about cats! Besides fun facts, there is some general cat information that could help you be more educated about cats.</p>
 				<br>
 				<div class="frame4">
 					<iframe src="https://cvillecatcare.com/veterinary-topics/101-amazing-cat-facts-fun-trivia-about-your-feline-friend/" height="400" width="300" title="kitty" class="iframe4"></iframe>
@@ -72,7 +73,7 @@
 				
 				<br>
 				<h2>FIVE</h2>
-				<p>Last but not least, if you started liking cats more or enjoyed these content, how about considering adopting a cat? Checke out <strong>TORONTO HUMANE SOCIETY</strong>. This is an animal shelter that I have visited before.  They have many adorables felines waiting to be adopted! There's also dogs :) (a puppy bit me. Ferocious puppy.) </p>
+				<p>Last but not least, if you started liking cats more or enjoyed this content, how about considering adopting a cat? Check out <strong>TORONTO HUMANE SOCIETY</strong>. This is an animal shelter that I have visited before.  They have many adorables felines waiting to be adopted! There's also dogs :) (a puppy bit me. Ferocious puppy.) </p>
 				<br>
 
 				<div class="frame5">
